--- a/BCG_GAMMA.ipynb
+++ b/BCG_GAMMA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BCG_GAMMA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZy5eaLm1bJD1fArFOZZrq",
+      "authorship_tag": "ABX9TyMwUOb77T3jikSLbg/5ufMw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "%matplotlib inline\n",
         "sns.set(color_codes=True)"
       ],
-      "execution_count": 38,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "#Set maximum number of columns to be displayed\n",
         "pd.set_option('display.max_columns',100)\n"
       ],
-      "execution_count": 39,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
           "height": 309
         },
         "id": "6dgCT4ROEJ-F",
-        "outputId": "cdf8a462-3e95-4279-80bb-da9a3bb27490"
+        "outputId": "ed67fb35-1117-4cac-ce3b-d2f263c33a01"
       },
       "source": [
         "#load data\n",
@@ -93,7 +93,7 @@
         "\n",
         "train_data.head()"
       ],
-      "execution_count": 40,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +406,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 58
         }
       ]
     },
@@ -418,12 +418,12 @@
           "height": 309
         },
         "id": "aIZsqAxmQBCx",
-        "outputId": "3a76e17c-ada0-4393-98b4-bbf4eb15092f"
+        "outputId": "0c99701e-e113-4961-b527-e73e4fcb0ab1"
       },
       "source": [
         "train_data.head()\n"
       ],
-      "execution_count": 41,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 59
         }
       ]
     },
@@ -748,12 +748,12 @@
           "height": 204
         },
         "id": "H2L9aK85QDVJ",
-        "outputId": "04d5eb8c-14a9-43ad-b244-968320085255"
+        "outputId": "59bf6ed1-a0e6-4d00-fe2f-9f56c58810b7"
       },
       "source": [
         "churn_data.head()"
       ],
-      "execution_count": 42,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 60
         }
       ]
     },
@@ -844,7 +844,7 @@
       "source": [
         "train = pd.merge(train_data,churn_data, on = 'id')"
       ],
-      "execution_count": 43,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -864,12 +864,12 @@
           "height": 1000
         },
         "id": "DvWk37dmRHzL",
-        "outputId": "57557c71-79b4-46f7-ce86-6569ec92edbb"
+        "outputId": "65b1cd2e-8ad8-462b-bf77-c31c33e344ab"
       },
       "source": [
         "pd.DataFrame({\"Data type\":train.dtypes})"
       ],
-      "execution_count": 44,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1073,7 +1073,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 62
         }
       ]
     },
@@ -1085,12 +1085,12 @@
           "height": 111
         },
         "id": "nNOYme-xRWjh",
-        "outputId": "51c40d0b-57e3-4a3a-fd6d-e7c71ddad18d"
+        "outputId": "49392e83-2e42-4060-86be-46fa186f4a3c"
       },
       "source": [
         "pd.DataFrame({\"Data Type\":history_data.dtypes})"
       ],
-      "execution_count": 45,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1139,7 +1139,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 63
         }
       ]
     },
@@ -1162,12 +1162,12 @@
           "height": 317
         },
         "id": "78iZoRAPSq1Z",
-        "outputId": "5f2bc86f-fc2b-4d43-9d66-4f9e65aaa2e0"
+        "outputId": "9751214d-9b29-4210-c16a-a14c5a9bb463"
       },
       "source": [
         "train.describe()"
       ],
-      "execution_count": 46,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1514,7 +1514,255 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XR5TcSkZjczF",
+        "outputId": "6133e804-5ee1-47d4-a76a-f40c902fd050",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "source": [
+        "missing=pd.DataFrame({\"missing in %\":round(train_data.isnull().sum()/len(train_data*100),2)})\n",
+        "missing\n",
+        "\n"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>missing in %</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>id</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>activity_new</th>\n",
+              "      <td>0.59</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>campaign_disc_ele</th>\n",
+              "      <td>1.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>channel_sales</th>\n",
+              "      <td>0.26</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cons_12m</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cons_gas_12m</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cons_last_month</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>date_activ</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>date_end</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>date_first_activ</th>\n",
+              "      <td>0.78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>date_modif_prod</th>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>date_renewal</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_base_bill_ele</th>\n",
+              "      <td>0.78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_base_bill_year</th>\n",
+              "      <td>0.78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_bill_12m</th>\n",
+              "      <td>0.78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_cons</th>\n",
+              "      <td>0.78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_cons_12m</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_cons_year</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_discount_energy</th>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_meter_rent_12m</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_price_energy_p1</th>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_price_energy_p2</th>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>forecast_price_pow_p1</th>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>has_gas</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>imp_cons</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>margin_gross_pow_ele</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>margin_net_pow_ele</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>nb_prod_act</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>net_margin</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>num_years_antig</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>origin_up</th>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pow_max</th>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                          missing in %\n",
+              "id                                0.00\n",
+              "activity_new                      0.59\n",
+              "campaign_disc_ele                 1.00\n",
+              "channel_sales                     0.26\n",
+              "cons_12m                          0.00\n",
+              "cons_gas_12m                      0.00\n",
+              "cons_last_month                   0.00\n",
+              "date_activ                        0.00\n",
+              "date_end                          0.00\n",
+              "date_first_activ                  0.78\n",
+              "date_modif_prod                   0.01\n",
+              "date_renewal                      0.00\n",
+              "forecast_base_bill_ele            0.78\n",
+              "forecast_base_bill_year           0.78\n",
+              "forecast_bill_12m                 0.78\n",
+              "forecast_cons                     0.78\n",
+              "forecast_cons_12m                 0.00\n",
+              "forecast_cons_year                0.00\n",
+              "forecast_discount_energy          0.01\n",
+              "forecast_meter_rent_12m           0.00\n",
+              "forecast_price_energy_p1          0.01\n",
+              "forecast_price_energy_p2          0.01\n",
+              "forecast_price_pow_p1             0.01\n",
+              "has_gas                           0.00\n",
+              "imp_cons                          0.00\n",
+              "margin_gross_pow_ele              0.00\n",
+              "margin_net_pow_ele                0.00\n",
+              "nb_prod_act                       0.00\n",
+              "net_margin                        0.00\n",
+              "num_years_antig                   0.00\n",
+              "origin_up                         0.01\n",
+              "pow_max                           0.00"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fgRJZvYznJNe",
+        "outputId": "7760dea7-6867-46c0-bad2-bec95bc97517",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "churn_data[churn_data['churn']==0].count()/churn_data[churn_data['churn']==1].count()"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "id       9.091536\n",
+              "churn    9.091536\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 128
         }
       ]
     }
