--- a/BCG_GAMMA.ipynb
+++ b/BCG_GAMMA.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "BCG_GAMMA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwUOb77T3jikSLbg/5ufMw",
+      "mount_file_id": "https://github.com/Daisyshi84/BCG_Gamma/blob/main/BCG_GAMMA.ipynb",
+      "authorship_tag": "ABX9TyNX94/Z+R5DTKidNlMWIPrG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +61,7 @@
         "%matplotlib inline\n",
         "sns.set(color_codes=True)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +73,7 @@
         "#Set maximum number of columns to be displayed\n",
         "pd.set_option('display.max_columns',100)\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,17 +84,17 @@
           "height": 309
         },
         "id": "6dgCT4ROEJ-F",
-        "outputId": "ed67fb35-1117-4cac-ce3b-d2f263c33a01"
+        "outputId": "60980809-5db4-404e-ab35-a7b3b8da4f5a"
       },
       "source": [
         "#load data\n",
-        "train_data = pd.read_csv(\"/content/ml_case_training_data.csv\") \n",
-        "churn_data = pd.read_csv(\"/content/ml_case_training_output.csv\") \n",
-        "history_data = pd.read_csv(\"/content/ml_case_training_output.csv\") \n",
+        "train_data = pd.read_csv(\"/content/drive/MyDrive/BCG/ml_case_training_data (1).csv\") \n",
+        "churn_data = pd.read_csv(\"/content/drive/MyDrive/BCG/ml_case_training_output.csv\") \n",
+        "history_data = pd.read_csv(\"/content/drive/MyDrive/BCG/ml_case_training_hist_data (1).csv\") \n",
         "\n",
         "train_data.head()"
       ],
-      "execution_count": 58,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +407,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 6
         }
       ]
     },
@@ -423,7 +424,7 @@
       "source": [
         "train_data.head()\n"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +754,7 @@
       "source": [
         "churn_data.head()"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +845,7 @@
       "source": [
         "train = pd.merge(train_data,churn_data, on = 'id')"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +870,7 @@
       "source": [
         "pd.DataFrame({\"Data type\":train.dtypes})"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1091,7 @@
       "source": [
         "pd.DataFrame({\"Data Type\":history_data.dtypes})"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1167,7 +1168,7 @@
       "source": [
         "train.describe()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,18 +1523,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "XR5TcSkZjczF",
-        "outputId": "6133e804-5ee1-47d4-a76a-f40c902fd050",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "6133e804-5ee1-47d4-a76a-f40c902fd050"
       },
       "source": [
         "missing=pd.DataFrame({\"missing in %\":round(train_data.isnull().sum()/len(train_data*100),2)})\n",
         "missing\n",
         "\n"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1740,15 +1741,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "fgRJZvYznJNe",
-        "outputId": "7760dea7-6867-46c0-bad2-bec95bc97517",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7760dea7-6867-46c0-bad2-bec95bc97517"
       },
       "source": [
         "churn_data[churn_data['churn']==0].count()/churn_data[churn_data['churn']==1].count()"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
